# VST3-Test

./: CMakeLists.txt
resource/: ECNex_Main.uidesc  ECNex_editor.uidesc
source/: ECNex_cids.h  ECNex_controller.cpp  ECNex_controller.h  ECNex_entry.cpp  ECNex_processor.cpp  ECNex_processor.h  version.h
